--- a/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
+++ b/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Admin.cs" />
+    <Compile Include="PublishHouse.cs" />
+    <Compile Include="OurMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
