--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAdminService.cs" />
+    <Compile Include="IHouseService.cs" />
     <Compile Include="IPublishHouseService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
