--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -42,8 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAdminService.cs" />
+    <Compile Include="IBuildingTypeService.cs" />
     <Compile Include="IHouseService.cs" />
+    <Compile Include="ILeaseTypeService.cs" />
+    <Compile Include="IOrientationService.cs" />
     <Compile Include="IPublishHouseService.cs" />
+    <Compile Include="IStyleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
