--- a/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
+++ b/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
@@ -47,9 +47,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminService.cs" />
+    <Compile Include="BuildingTypeService.cs" />
     <Compile Include="HouseService.cs" />
+    <Compile Include="LeaseTypeService.cs" />
+    <Compile Include="OrientationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishHouseService.cs" />
+    <Compile Include="StyleService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dwelling.IServices\Dwelling.IServices.csproj">
