--- a/Dwelling.Demo/Dwelling.Api/Web.config
+++ b/Dwelling.Demo/Dwelling.Api/Web.config
@@ -37,7 +37,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="DwellingDB" connectionString="server=localhost;user id=root;password=946946;database=dwellingdb" />
+    <add name="DwellingDB" connectionString="server=xinxin;user id=root;password=946946;database=dwellingdb" />
   </connectionStrings>
 
 <system.webServer>
