--- a/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
+++ b/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
@@ -125,6 +125,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminApiController.cs" />
     <Compile Include="Controllers\HouseApiController.cs" />
+    <Compile Include="Controllers\PublishHouseApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
