--- a/WxDwelling/project.config.json
+++ b/WxDwelling/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
-	"appid": "wx0f32af61bdd28d9e",
+	"appid": "wxb44d2daab45c8aaa",
 	"projectname": "WxDwelling",
 	"debugOptions": {
 		"hidedInDevtools": []
