--- a/WxDwelling/app.json
+++ b/WxDwelling/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
+      "pages/homeissueone/homeissueone",
     "pages/homeissue/homeissue",
     "pages/homepage/homepage",
     "pages/index/index",
     "pages/logs/logs",
     "pages/homeissue"
-   
+ 
   ],
   "window": {
     "backgroundTextStyle": "light",
