--- a/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
+++ b/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
@@ -52,6 +52,7 @@
     <Compile Include="FacilityService.cs" />
     <Compile Include="HabitableRoomServices.cs" />
     <Compile Include="HouseService.cs" />
+    <Compile Include="ImageService.cs" />
     <Compile Include="LeaseTypeService.cs" />
     <Compile Include="OrientationService.cs" />
     <Compile Include="PriceService.cs" />
