--- a/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
+++ b/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Controllers\AdminApiController.cs" />
     <Compile Include="Controllers\HouseApiController.cs" />
     <Compile Include="Controllers\ImageController.cs" />
+    <Compile Include="Controllers\PermissionApiController.cs" />
     <Compile Include="Controllers\PublishHouseApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
