--- a/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
+++ b/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
@@ -53,10 +53,12 @@
     <Compile Include="Image.cs" />
     <Compile Include="LeaseType.cs" />
     <Compile Include="Orientation.cs" />
+    <Compile Include="Permission.cs" />
     <Compile Include="Price.cs" />
     <Compile Include="PublishHouse.cs" />
     <Compile Include="OurMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RolePermission.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="Suggest.cs" />
     <Compile Include="Track.cs" />
