--- a/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
+++ b/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ImageService.cs" />
     <Compile Include="LeaseTypeService.cs" />
     <Compile Include="OrientationService.cs" />
+    <Compile Include="PermissionService.cs" />
     <Compile Include="PriceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishHouseService.cs" />
