--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -53,6 +53,7 @@
     <Compile Include="IPermissionService.cs" />
     <Compile Include="IPriceService.cs" />
     <Compile Include="IPublishHouseService.cs" />
+    <Compile Include="IRolePermissionService.cs" />
     <Compile Include="IRoleService.cs" />
     <Compile Include="IStyleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
