--- a/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
+++ b/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
@@ -59,6 +59,7 @@
     <Compile Include="PriceService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishHouseService.cs" />
+    <Compile Include="RolePermissionService.cs" />
     <Compile Include="RoleService.cs" />
     <Compile Include="StyleService.cs" />
   </ItemGroup>
