--- a/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
+++ b/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
@@ -101,7 +101,6 @@
     <Content Include="H-ui.admin\404.html" />
     <Content Include="H-ui.admin\AddRole.html" />
     <Content Include="H-ui.admin\add_permission.html" />
-
     <Content Include="H-ui.admin\admin-add.html" />
     <Content Include="H-ui.admin\admin-list.html" />
     <Content Include="H-ui.admin\admin-password-edit.html" />
@@ -1193,6 +1192,7 @@
     <Content Include="H-ui.admin\temp\Thumb\woshi.jpg" />
     <Content Include="H-ui.admin\temp\Thumb\youyongchi.jpg" />
     <Content Include="H-ui.admin\welcome.html" />
+    <Content Include="H-ui.admin\Zshow.html" />
     <Content Include="H-ui.admin\_footer.html" />
     <Content Include="H-ui.admin\_header.html" />
     <Content Include="H-ui.admin\_menu.html" />
