--- a/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
+++ b/Dwelling.Demo/Dwelling.Model/Dwelling.Model.csproj
@@ -61,7 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Role.cs" />
     <Compile Include="RolePermission.cs" />
-    <Compile Include="roleuser.cs" />
+    <Compile Include="AdminRole.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="Suggest.cs" />
     <Compile Include="Track.cs" />
