--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -55,6 +55,7 @@
     <Compile Include="IPublishHouseService.cs" />
     <Compile Include="IRoleService.cs" />
     <Compile Include="IStyleService.cs" />
+    <Compile Include="ISuggestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
