--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IAdminRoleService.cs" />
     <Compile Include="IAdminService.cs" />
     <Compile Include="IAreaService.cs" />
     <Compile Include="IBuildingTypeService.cs" />
@@ -50,7 +51,7 @@
     <Compile Include="IImageService.cs" />
     <Compile Include="ILeaseTypeService.cs" />
     <Compile Include="IOrientationService.cs" />
- <Compile Include="IRolePermissionService.cs" />
+    <Compile Include="IRolePermissionService.cs" />
     <Compile Include="IPermissionService.cs" />
     <Compile Include="IPriceService.cs" />
     <Compile Include="IPublishHouseService.cs" />
