--- a/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
+++ b/Dwelling.Demo/Dwelling.Services/Dwelling.Services.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdminRoleService.cs" />
     <Compile Include="AdminService.cs" />
     <Compile Include="AreaService.cs" />
     <Compile Include="BuildingTypeService.cs" />
