--- a/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
+++ b/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Controllers\PublishHouseApiController.cs" />
     <Compile Include="Controllers\RoleApiController.cs" />
     <Compile Include="Controllers\RolePermissionController.cs" />
+    <Compile Include="Controllers\SuggestController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
