--- a/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
+++ b/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
@@ -94,8 +94,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Img\bootstrap.css" />
-    <Content Include="Content\Img\jquery-1.10.2.js" />
+    <Content Include="Content\jquery-1.10.2.js" />
     <Content Include="Content\jquery-3.1.1.js" />
     <Content Include="Global.asax" />
     <Content Include="H-ui.admin\404.html" />
@@ -1192,6 +1191,7 @@
     <Content Include="H-ui.admin\temp\Thumb\weishengjian2.jpg" />
     <Content Include="H-ui.admin\temp\Thumb\woshi.jpg" />
     <Content Include="H-ui.admin\temp\Thumb\youyongchi.jpg" />
+    <Content Include="H-ui.admin\Update_Suggest.html" />
     <Content Include="H-ui.admin\welcome.html" />
     <Content Include="H-ui.admin\Zshow.html" />
     <Content Include="H-ui.admin\_footer.html" />
@@ -1254,6 +1254,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Content\Img\" />
     <Folder Include="Models\" />
     <Folder Include="Views\House\" />
   </ItemGroup>
