--- a/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
+++ b/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
@@ -117,7 +117,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Image\1.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Image\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
