--- a/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
+++ b/Dwelling.Demo/Dwelling.Api/Dwelling.Api.csproj
@@ -125,6 +125,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminApiController.cs" />
     <Compile Include="Controllers\AdminRoleController.cs" />
+    <Compile Include="Controllers\CollectController.cs" />
     <Compile Include="Controllers\ComplainServiceApiController.cs" />
     <Compile Include="Controllers\HouseApiController.cs" />
     <Compile Include="Controllers\ImageController.cs" />
