--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -45,6 +45,7 @@
     <Compile Include="IAdminService.cs" />
     <Compile Include="IAreaService.cs" />
     <Compile Include="IBuildingTypeService.cs" />
+    <Compile Include="ICollectService.cs" />
     <Compile Include="IComplainService.cs" />
     <Compile Include="IFacilityService.cs" />
     <Compile Include="IHabitableroomServices.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="ISuggestService.cs" />
     <Compile Include="IUsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dwelling.Model\Dwelling.Model.csproj">
