--- a/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
+++ b/Dwelling.Demo/Dwelling.IServices/Dwelling.IServices.csproj
@@ -60,9 +60,9 @@
     <Compile Include="IRoleService.cs" />
     <Compile Include="IStyleService.cs" />
     <Compile Include="ISuggestService.cs" />
+    <Compile Include="ITrackService.cs" />
     <Compile Include="IUsersService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dwelling.Model\Dwelling.Model.csproj">
