--- a/Dwelling.Demo/Dwelling.Common/Dwelling.Common.csproj
+++ b/Dwelling.Demo/Dwelling.Common/Dwelling.Common.csproj
@@ -31,7 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Dapper">
+    <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\DLL\Dapper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.JScript" />
@@ -41,7 +42,7 @@
     <Reference Include="MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>C:\Users\Lenovo\Desktop\技能附件\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\DLL\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="ServiceStack">
       <HintPath>..\DLL\ServiceStack.dll</HintPath>
