--- a/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
+++ b/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
@@ -110,6 +110,7 @@
     <Content Include="H-ui.admin\charts-7.html" />
     <Content Include="H-ui.admin\favicon.ico" />
     <Content Include="H-ui.admin\feedback-list.html" />
+    <Content Include="H-ui.admin\feedback1-list.html" />
     <Content Include="H-ui.admin\index.html" />
     <Content Include="H-ui.admin\lib\datatables\1.10.0\jquery.dataTables.min.js" />
     <Content Include="H-ui.admin\lib\DD_belatedPNG_0.0.8a-min.js" />
