--- a/WxDwelling/project.config.json
+++ b/WxDwelling/project.config.json
@@ -13,7 +13,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.4.1",
-	"appid": "wxb9c8f6579ba1a69e",
+	"appid": "wxe47e27cfa22da27f",
 	"projectname": "WxDwelling",
 	"debugOptions": {
 		"hidedInDevtools": []
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": 2,
 			"list": [
 				{
 					"id": -1,
@@ -47,7 +47,13 @@
 				{
 					"id": -1,
 					"name": "bbb",
-					"pathName": "pages/AboutOur/AboutOur"
+					"pathName": "pages/AboutOur/AboutOur",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "发布",
+					"pathName": "pages/homeissueone/homeissueone"
 				}
 			]
 		}
