--- a/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
+++ b/Dwelling.Demo/Dwelling.UI/Dwelling.UI.csproj
@@ -109,6 +109,7 @@
     <Content Include="H-ui.admin\charts-5.html" />
     <Content Include="H-ui.admin\charts-6.html" />
     <Content Include="H-ui.admin\charts-7.html" />
+    <Content Include="H-ui.admin\Echarts-wsl.html" />
     <Content Include="H-ui.admin\ECharts.html" />
     <Content Include="H-ui.admin\favicon.ico" />
     <Content Include="H-ui.admin\feedback-list.html" />
@@ -1194,6 +1195,7 @@
     <Content Include="H-ui.admin\temp\Thumb\weishengjian2.jpg" />
     <Content Include="H-ui.admin\temp\Thumb\woshi.jpg" />
     <Content Include="H-ui.admin\temp\Thumb\youyongchi.jpg" />
+    <Content Include="H-ui.admin\UpdateEnable.html" />
     <Content Include="H-ui.admin\Update_Complain.html" />
     <Content Include="H-ui.admin\Update_Suggest.html" />
     <Content Include="H-ui.admin\welcome.html" />
